Update analyst cards with new details and images

--- a/projects/Cognitia/index.html
+++ b/projects/Cognitia/index.html
@@ -382,12 +382,12 @@
             <!-- Card 1 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="https://via.placeholder.com/400x400/0077b5/ffffff?text=Analyst+1" alt="Data Analyst 1">
+                    <img src="sama.png" alt="Data Analyst 1">
                 </div>
                 <div class="card-content">
-                    <h2>Student Name 1</h2>
-                    <p>Data Analyst</p>
-                    <a href="https://linkedin.com/in/username1" target="_blank" class="linkedin-btn">
+                    <h2>Samaa Mwafi 1</h2>
+                    <p>Quality Specialist at Ministry of Health and Population</p>
+                    <a href="https://www.linkedin.com/in/sama-mwafi-74b061292/" target="_blank" class="linkedin-btn">
                         LinkedIn Profile
                     </a>
                 </div>
@@ -396,12 +396,12 @@
             <!-- Card 2 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="https://via.placeholder.com/400x400/009d9a/ffffff?text=Analyst+2" alt="Data Analyst 2">
+                    <img src="samar.png" alt="Data Analyst 2">
                 </div>
                 <div class="card-content">
-                    <h2>Student Name 2</h2>
-                    <p>Data Scientist</p>
-                    <a href="https://linkedin.com/in/username2" target="_blank" class="linkedin-btn">
+                    <h2>Samar Mohamed/h2>
+                    <p>Medical Coordinator at Dakahlia Health Directorate</p>
+                    <a href="https://www.linkedin.com/in/samar-moh456/" target="_blank" class="linkedin-btn">
                         LinkedIn Profile
                     </a>
                 </div>
@@ -410,12 +410,12 @@
             <!-- Card 3 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="https://via.placeholder.com/400x400/00d9ff/ffffff?text=Analyst+3" alt="Data Analyst 3">
+                    <img src="Shimaa.png" alt="Data Analyst 3">
                 </div>
                 <div class="card-content">
-                    <h2>Student Name 3</h2>
-                    <p>Business Analyst</p>
-                    <a href="https://linkedin.com/in/username3" target="_blank" class="linkedin-btn">
+                    <h2>Shimaa El-Metwally</h2>
+                    <p>Computer Engineering Graduate  & TA  </p>
+                    <a href="https://https://www.linkedin.com/in/shimaa-elmetwally/" target="_blank" class="linkedin-btn">
                         LinkedIn Profile
                     </a>
                 </div>
@@ -424,12 +424,12 @@
             <!-- Card 4 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="https://via.placeholder.com/400x400/2c5364/ffffff?text=Analyst+4" alt="Data Analyst 4">
+                    <img src="me.png" alt="Data Analyst 4">
                 </div>
                 <div class="card-content">
-                    <h2>Student Name 4</h2>
-                    <p>Analytics Engineer</p>
-                    <a href="https://linkedin.com/in/username4" target="_blank" class="linkedin-btn">
+                    <h2>Esraa Allam</h2>
+                    <p>Biotechnologist & Data Analyst</p>
+                    <a href="https://github.com/Esraa-H-Allam/Cognitia/blob/main/linkedin.com/in/esraa-allam" target="_blank" class="linkedin-btn">
                         LinkedIn Profile
                     </a>
                 </div>
