Fix LinkedIn URLs and remove extra space

--- a/projects/Cognitia/index.html
+++ b/projects/Cognitia/index.html
@@ -413,7 +413,7 @@
                     <img src="Shimaa.png" alt="Data Analyst 3">
                 </div>
                 <div class="card-content">
-                    <h2>Shimaa El-Metwally</h2>
+                    <h2>Shimaa El-Metwally </h2>
                     <p>Computer Engineering Graduate  & TA  </p>
                     <a href="https://https://www.linkedin.com/in/shimaa-elmetwally/" target="_blank" class="linkedin-btn">
                         LinkedIn Profile
@@ -429,7 +429,7 @@
                 <div class="card-content">
                     <h2>Esraa Allam</h2>
                     <p>Biotechnologist & Data Analyst</p>
-                    <a href="https://github.com/Esraa-H-Allam/Cognitia/blob/main/linkedin.com/in/esraa-allam" target="_blank" class="linkedin-btn">
+                    <a href="https://www.linkedin.com/in/esraa-allam/" target="_blank" class="linkedin-btn">
                         LinkedIn Profile
                     </a>
                 </div>
