Update image source for Shimaa's card

--- a/projects/Cognitia/index.html
+++ b/projects/Cognitia/index.html
@@ -410,7 +410,7 @@
             <!-- Card 3 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="projects/Cognitia/Shmiaa.png" alt="Data Analyst 3" loading="lazy">
+                    <img src="shimaa.png" alt="Data Analyst 3" loading="lazy">
                 </div>
                 <div class="card-content">
                     <h2>Shimaa El-Metwally</h2>
