--- a/projects/Cognitia/index.html
+++ b/projects/Cognitia/index.html
@@ -375,7 +375,7 @@
     <div class="container">
         <header>
             <h1>COGNITIA</h1>
-            <p class="subtitle">Data Analysis Excellence</p>
+            <p class="subtitle">Digital Egypt Pioneers</p>
         </header>
         
         <div class="cards-wrapper">
