--- a/projects/Cognitia/index.html
+++ b/projects/Cognitia/index.html
@@ -233,7 +233,7 @@
         }
 
         .supervisor-card {
-            max-width: 280px;
+            max-width: 300px;
             width: 100%;
         }
 
@@ -279,7 +279,7 @@
 
         .card-image {
             width: 100%;
-            height: 160px;
+            height: 200px;
             overflow: hidden;
             position: relative;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -289,11 +289,14 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: top center;
             transition: all 0.5s ease;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
         }
 
         .card:hover .card-image img {
-            transform: scale(1.1) rotate(2deg);
+            transform: scale(1.08);
         }
 
         .card-content {
@@ -358,6 +361,31 @@
             font-size: 0.9rem;
         }
 
+        /* Image Loading State */
+        .card-image::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            z-index: 1;
+        }
+
+        .card-image img.loaded {
+            animation: fadeIn 0.5s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
         /* Responsive */
         @media (max-width: 1200px) {
             .cards-wrapper {
@@ -407,7 +435,7 @@
         <div class="supervisor-section">
             <div class="card supervisor-card">
                 <div class="card-image">
-                    <img src="dramr.jpg" alt="Supervisor" loading="lazy">
+                    <img src="supervisor.png" alt="Supervisor" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Dr.Amr Ayyad</h2>
@@ -424,7 +452,7 @@
             <!-- Card 1 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="sama.jpg" alt="Data Analyst 1" loading="lazy">
+                    <img src="sama.png" alt="Samaa Mwafi" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Samaa Mwafi</h2>
@@ -438,7 +466,7 @@
             <!-- Card 2 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="samar.jpg" alt="Data Analyst 2" loading="lazy">
+                    <img src="samar.png" alt="Samar Mohamed" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Samar Mohamed</h2>
@@ -452,7 +480,7 @@
             <!-- Card 3 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="Shmiaa.jpg" alt="Data Analyst 3" loading="lazy">
+                    <img src="shimaa.png" alt="Shimaa El-Metwally" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Shimaa El-Metwally</h2>
@@ -466,7 +494,7 @@
             <!-- Card 4 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="me.jpg" alt="Data Analyst 4" loading="lazy">
+                    <img src="me.png" alt="Esraa Allam" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Esraa Allam</h2>
