Update image sources for supervisor cards

--- a/projects/Cognitia/index.html
+++ b/projects/Cognitia/index.html
@@ -435,7 +435,7 @@
         <div class="supervisor-section">
             <div class="card supervisor-card">
                 <div class="card-image">
-                    <img src="supervisor.png" alt="Supervisor" loading="lazy" width="300" height="200">
+                    <img src="dramr.jpg" alt="Supervisor" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Dr.Amr Ayyad</h2>
@@ -452,7 +452,7 @@
             <!-- Card 1 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="sama.png" alt="Samaa Mwafi" loading="lazy" width="300" height="200">
+                    <img src="sama.jpg" alt="Samaa Mwafi" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Samaa Mwafi</h2>
@@ -466,7 +466,7 @@
             <!-- Card 2 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="samar.png" alt="Samar Mohamed" loading="lazy" width="300" height="200">
+                    <img src="samar.jpg" alt="Samar Mohamed" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Samar Mohamed</h2>
@@ -480,7 +480,7 @@
             <!-- Card 3 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="shimaa.png" alt="Shimaa El-Metwally" loading="lazy" width="300" height="200">
+                    <img src="Shmiaa.jpg" alt="Shimaa El-Metwally" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Shimaa El-Metwally</h2>
@@ -494,7 +494,7 @@
             <!-- Card 4 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="me.png" alt="Esraa Allam" loading="lazy" width="300" height="200">
+                    <img src="me.jpg" alt="Esraa Allam" loading="lazy" width="300" height="200">
                 </div>
                 <div class="card-content">
                     <h2>Esraa Allam</h2>
